kubernetes/overlays/homelab/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: prometheus
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
