kubernetes/overlays/homelab/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    tailscale.com/tags: "tag:k8s-prometheus"

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: prometheus-server
      port:
        number: 80
  tls:
    - hosts:
        - prometheus
